--- a/views/screens/credits.html
+++ b/views/screens/credits.html
@@ -1,22 +1,31 @@
 <div class="text-center">
-    <div class="page-header">
-        <h3>Created By</h3>
+    <div class="credit">
+        <p class="credit-header">Created By</p>
+        <p class="credit-name">Keith Ott</p>
     </div>
-    <h5>Keith Ott</h5>
 
-    <div class="page-header">
-        <h3>Special Thanks</h3>
+    <div class="credit">
+        <p class="credit-header">Special Thanks</p>
+        <p class="credit-name">Becky S.</p>
     </div>
-    <h5>Becky S.</h5>
 
-    <div class="page-header">
-        <h3>Card Designs and Backgrounds</h3>
+    <div class="credit">
+        <p class="credit-header">Card Designs and Background</p>
+        <p class="credit-name">
+            <a href="http://lea.verou.me/css3patterns/">CSS3 Patterns Gallery</a>
+        </p>
     </div>
-    <h5><a href="http://lea.verou.me/css3patterns/">CSS3 Patterns Gallery</a></h5>
 
-    <div class="page-header">
-        <h3>Music</h3>
+    <div class="credit">
+        <p class="credit-header">Music</p>
+        <p class="credit-name">
+            <a href="http://cmamusic.bandcamp.com/">CMA</a>
+        </p>
+        <p class="small" h>"Without You", "You're Not Alone", "Caught In Our Thoughts", "Ku'uipo", "Moving Forward" used under the
+            <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported</a> license. Music was transcoded to another format. No other changes
+            were made.
+        </p>
     </div>
-    <h5><a href="http://cmamusic.bandcamp.com/">CMA</a><br /></h5>
-    <h6>"Without You", "You're Not Alone", "Caught In Our Thoughts", "Ku'uipo", "Moving Forward" used under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported</a> license. Music was transcoded to another format. No other changes were made.</h6>
+
+
 </div>
