--- a/views/screens/instructions.html
+++ b/views/screens/instructions.html
@@ -1,35 +1,53 @@
-<h3>Overview</h3>
-<p>Ninety-Nine is played with two to five players and a standard 52 card deck.  (In this version of Ninety-Nine, only the values and effects each card has are displayed in order to simplify the game.)  Each player is randomly dealt three cards.  Players alternate playing cards, adding or subtracting from the Count.</p>
-<p>At no point can the Count exceed 99 nor can it fall below 0.  Players who cannot play a card that will keep the Count below or equal to 99 are eliminated.  The last player remaining is the winner.</p>
-<h3>Playing the Game</h3>
-<p>At the bottom of the screen are your three cards.  If the card can be played, it will be bright blue.  If it cannot be played, it will be a light blue.  Tap on the card you wish to play.  It will be placed on the game board, its value will be added to the count, and its effect will be applied.  A new card is automatically drawn for you, and play continues clockwise to the next player (unless the order has been reversed).</p>
-<p>If a card can be played in one of many ways, a pop-up will appear near the card.  Tap the way you wish to play.  Tapping anywhere else on the screen will dismiss the pop-up, allowing you to select a different card.</p>
-<p>CPU players will automatically play a card after a slight delay.  They will draw another card and play continues clockwise to the next player (unless the order has been reversed).</p>
-<p>During the game, if the deck is exhausted, the played cards will be reshuffled.  Cards will continue to be drawn from this reshuffled deck.</p>
-<h3>Types of Cards</h3>
-<dl>
-    <dt>+1, +2, +5, +6, +7, +8</dt>
-    <dd>When played, these cards add their face value to the count.  Play continues with the next player.</dd>
-</dl>
-<dl>
-    <dt>+/-10</dt>
-    <dd>When played, the player can either add 10 (+10) or subtract 10 (-10) from the count.  Play continues with the next player.</dd>
-</dl>
-<dl>
-    <dt><i class="fa fa-long-arrow-right"></i> Pass</dt>
-    <dd>When played, the count remains the same and play continues to the next player.</dd>
-</dl>
-<dl>
-    <dt>+3, <i class="fa fa-share"></i> Skip</dt>
-    <dd>When played, three is added to the count (+3) and the next player loses his or her turn.  Play continues with the next player.</dd>
-</dl>
-<dl>
-    <dt><i class="fa fa-retweet"></i> Reverse</dt>
-    <dd>When played, the count remains the same and the order of play is reversed.  Play continues with the player who previously went.</dd>
-</dl>
-<dl>
-    <dt>99</dt>
-    <dd>When played, the count is set to 99, even if it is already 99.  Play continues with the next player.</dd>
-</dl>
-<h3>Winning the Game</h3>
-<p>If a player cannot play a card that will keep the Count below or equal to 99, he or she is eliminated from the game.  The final player remaining is the winner of the game.</p>
+<div class="instructions">
+    <h3>Overview</h3>
+    <p>Ninety-Nine is played with two to five players and a standard 52 card deck. (In this version of Ninety-Nine, only the
+        values and effects each card has are displayed in order to simplify the game.) Each player is randomly dealt three
+        cards. Players alternate playing cards, adding or subtracting from the Count.</p>
+    <p>At no point can the Count exceed 99 nor can it fall below 0. Players who cannot play a card that will keep the Count
+        below or equal to 99 are eliminated. The last player remaining is the winner.</p>
+    <h3>Playing the Game</h3>
+    <p>At the bottom of the screen are your three cards. If the card can be played, it will be bright blue. If it cannot be
+        played, it will be a light blue. Tap on the card you wish to play. It will be placed on the game board, its value
+        will be added to the count, and its effect will be applied. A new card is automatically drawn for you, and play continues
+        clockwise to the next player (unless the order has been reversed).</p>
+    <p>If a card can be played in one of many ways, a pop-up will appear near the card. Tap the way you wish to play. Tapping
+        anywhere else on the screen will dismiss the pop-up, allowing you to select a different card.</p>
+    <p>CPU players will automatically play a card after a slight delay. They will draw another card and play continues clockwise
+        to the next player (unless the order has been reversed).</p>
+    <p>During the game, if the deck is exhausted, the played cards will be reshuffled. Cards will continue to be drawn from
+        this reshuffled deck.</p>
+    <h3>Types of Cards</h3>
+    <dl>
+        <dt>+1, +2, +5, +6, +7, +8</dt>
+        <dd>When played, these cards add their face value to the count. Play continues with the next player.</dd>
+    </dl>
+    <dl>
+        <dt>+/-10</dt>
+        <dd>When played, the player can either add 10 (+10) or subtract 10 (-10) from the count. Play continues with the next
+            player.</dd>
+    </dl>
+    <dl>
+        <dt>
+            <i class="fa fa-long-arrow-right"></i> Pass</dt>
+        <dd>When played, the count remains the same and play continues to the next player.</dd>
+    </dl>
+    <dl>
+        <dt>+3,
+            <i class="fa fa-share"></i> Skip</dt>
+        <dd>When played, three is added to the count (+3) and the next player loses his or her turn. Play continues with the
+            next player.</dd>
+    </dl>
+    <dl>
+        <dt>
+            <i class="fa fa-retweet"></i> Reverse</dt>
+        <dd>When played, the count remains the same and the order of play is reversed. Play continues with the player who previously
+            went.</dd>
+    </dl>
+    <dl>
+        <dt>99</dt>
+        <dd>When played, the count is set to 99, even if it is already 99. Play continues with the next player.</dd>
+    </dl>
+    <h3>Winning the Game</h3>
+    <p>If a player cannot play a card that will keep the Count below or equal to 99, he or she is eliminated from the game.
+        The final player remaining is the winner of the game.</p>
+</div>
